2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/ProjectReference.cs,
	  MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/ProjectPathItemPropertyAttribute.cs,
	  MonoDevelop.Projects/CombineEntry.cs,
	  MonoDevelop.Projects/ProjectFileCollection.cs,
	  MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/CmbxFileFormat.cs,
	  MonoDevelop.Projects/ProjectConvertTool.cs,
	  MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.Parser/AssemblyCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs,
	  MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Applied changes
	  that were neccassary for to the new FileService.

2007-10-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects/CustomCommand.cs, MonoDevelop.Projects/Project.cs:
	  Changed calls for the new StringParser.

2007-10-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: Refactored the
	  IRefactorer a bit (removed the hintreturntype).

2007-10-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Ambience/ConversionFlags.cs,
	  MonoDevelop.Projects.Ambience/Ambience.cs,
	  MonoDevelop.Projects.Ambience/NetAmbience.cs: Added some ambience
	  functionality used by the refactory commands.

2007-10-09  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs (BuildResources): New. Moved
	code for building resources from language bindings, to here.
	(GetResourceId): Likewise.
	(RegexErrorLinePos): Likewise.
	(GenerateSatelliteAssemblies): New. For localized resources.
	(GetCulture): New.
	(CultureNamesTable): New.

2007-10-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs,